# cloak

./: .editorconfig  .gitignore  LICENSE  LOCAL_SETUP.md  PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
api/: .env.example  package.json  tsconfig.json  vitest.config.ts
api/src/: app.ts  server.ts
api/src/config/: index.ts
api/src/controllers/: auth.controller.ts  vault.controller.ts
api/tests/: auth.test.ts  health.test.ts  vault.test.ts
desktop/: .env.production  index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/src/commands/: crypto.rs  fs.rs  mod.rs
desktop/src-tauri/src/crypto/: aead.rs  dek.rs  dotenvx_compat.rs  error.rs  kdf.rs  mod.rs
desktop/src-tauri/src/keystore/: mod.rs
desktop/src-tauri/src/session/: mod.rs
desktop/src-tauri/src/sidecar/: mod.rs
docs/: CORE_LOGICS.md  DISTRIBUTION.md  TEAMS_ROADMAP.md  prd.md
docs/ignore/: env-validation-rules.md  idea.md  raw-er.txt
scripts/: ship.sh
web/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vercel.json
web/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: theme-provider.tsx
web/constants/: site.ts
web/content/: site-content.ts
web/hooks/: use-platform.ts
web/lib/: github.ts  lottie-once.ts  metadata.ts  utils.ts
web/types/: github.ts
(+135 files in other folders)
