[package]
name = "cloak"
version = "0.1.0"
description = "Zero-knowledge secrets manager and password vault"
authors = ["M. Yousuf <yousuf.work09@gmail.com>"]
license = "MIT"
homepage = "https://yousuf-dev.com"
repository = "https://github.com/yousuf-git/cloak"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
argon2 = "0.5"
chacha20poly1305 = "0.10"
dotenvx = "0.2"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
base64 = "0.22"
thiserror = "2"
parking_lot = "0.12"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
